--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/newyork_dots.css" />
 		<link rel="stylesheet" href="css/tokyo.css" />
+		<link rel="stylesheet" href="css/tokyo2.css" />
 		<link rel="stylesheet" href="css/circle.css" />
 	</head>
 	<body>
@@ -82,9 +83,13 @@
 								style="width: 100%; height: 500px"
 							></div>
 							<div id="percentage-output"></div>
+							<div id="chart-container"></div>
+    						<div id="percentage-output"></div>
+    						<div class="tooltip" id="tooltip"></div>
 						</div>
 						<script type="module" src="data/tokyo.js"></script>
 						<script type="module" src="js/script_tokyo.js"></script>
+						<script type="module" src="js/script_tokyo2.js"></script>
 					</label>
 
 					<label for="tab_4">
