--- a/index.html
+++ b/index.html
@@ -78,14 +78,17 @@
 							<h3>
 								<span id="airbnb-index-tokyo">Loading...</span>
 							</h3>
-							<div
-								id="treemap-container"
-								style="width: 100%; height: 500px"
-							></div>
-							<div id="percentage-output"></div>
-							<div id="chart-container"></div>
-    						<div id="percentage-output"></div>
-    						<div class="tooltip" id="tooltip"></div>
+							<div style="display: flex; justify-content: space-between;">
+								<div>
+									<div id="treemap-container" style="width: 100%; height: 500px"></div>
+									<div id="percentage-output"></div>
+								</div>
+								<div>
+									<div id="chart-container"></div>
+									<div id="percentage-output"></div>
+									<div class="tooltip" id="tooltip"></div>
+								</div>
+							</div>
 						</div>
 						<script type="module" src="data/tokyo.js"></script>
 						<script type="module" src="js/script_tokyo.js"></script>
