--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/newyork_dots.css" />
 		<link rel="stylesheet" href="css/tokyo.css" />
 		<link rel="stylesheet" href="css/circle.css" /> 
+		<link rel="stylesheet" href="css/barchart.css" /> 
 	</head>
 	<body>
 		<main>
@@ -114,7 +115,8 @@
 							</h3>
 
 							
-							<div class="container" style="display: flex; justify-content: space-between: -1000px; margin-left: -1000px;">
+							<div class="container" style="display: flex; justify-content: space-around; margin-left: -1250px; gap: 20px; margin-top: 350px;">
+
 
 								<div class="chart-group">
 									<div id="chart"></div>
