Add barchart CSS file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/newyork_dots.css" />
 		<link rel="stylesheet" href="css/tokyo.css" />
 		<link rel="stylesheet" href="css/circle.css" />
+		<link rel="stylesheet" href="css/barchart.css" />
 		<link rel="stylesheet" href="css/bubbles_newyork.css" />
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 	</head>
