--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/newyork_dots.css" />
 		<link rel="stylesheet" href="css/tokyo.css" />
+		<link rel="stylesheet" href="css/tokyo2.css" />
 		<link rel="stylesheet" href="css/circle.css" />
 		<link rel="stylesheet" href="css/barchart.css" />
 		<link rel="stylesheet" href="css/bubbles_newyork.css" />
@@ -95,14 +96,21 @@
 							<h3>
 								<span id="airbnb-index-tokyo">Loading...</span>
 							</h3>
-							<div
-								id="treemap-container"
-								style="width: 100%; height: 500px"
-							></div>
-							<div id="percentage-output"></div>
+							<div style="display: flex; justify-content: space-between;">
+								<div>
+									<div id="treemap-container" style="width: 100%; height: 500px"></div>
+									<div id="percentage-output"></div>
+								</div>
+								<div>
+									<div id="chart-container"></div>
+									<div id="percentage-output"></div>
+									<div class="tooltip" id="tooltip"></div>
+								</div>
+							</div>
 						</div>
 						<script type="module" src="data/tokyo.js"></script>
 						<script type="module" src="js/script_tokyo.js"></script>
+						<script type="module" src="js/script_tokyo2.js"></script>
 					</label>
 
 					<label for="tab_4">
