--- a/index.html
+++ b/index.html
@@ -83,32 +83,51 @@
 					<label for="tab_3">
 						<div id="content" class="tokyo">TOKYO</div>
 						<div class="tab-content">
-							<h1>
-								N° of Airbnb listings
-								<span class="city-name">Tokyo</span>
-								<span id="total-ids-tokyo">Loading...</span>
-							</h1>
-							<h3>
-								<span id="apartments-tokyo">Loading...</span>
-							</h3>
-							<h3>
-								<span id="population-tokyo">Loading...</span> /
-								<span id="tourists-tokyo">Loading...</span>
-							</h3>
-							<h3>
-								<span id="airbnb-index-tokyo">Loading...</span>
-							</h3>
-							<div style="display: flex; justify-content: space-between;">
-								<div>
-									<div id="treemap-container" style="width: 100%; height: 500px"></div>
-									<div id="percentage-output"></div>
-								</div>
-								<div>
-									<div id="chart-container"></div>
-									<div id="percentage-output"></div>
-									<div class="tooltip" id="tooltip"></div>
-								</div>
-							</div>
+							<table style="border: 1px solid black; border-collapse: collapse; width: calc(100% - 25px); margin: 0 12.5px; table-layout: fixed; width: 1500px;">
+								<tr style="border: 1px solid black;">
+									<td style="border: 1px solid black;">
+										<h1>
+											N° of Airbnb listings
+											<span class="city-name">Tokyo</span>
+											<span id="total-ids-tokyo">Loading...</span>
+										</h1>
+										<h3>
+											<span id="apartments-tokyo">Loading...</span>
+										</h3>
+										<h3>
+											<span id="population-tokyo">Loading...</span> /
+											<span id="tourists-tokyo">Loading...</span>
+										</h3>
+										<h3>
+											<span id="airbnb-index-tokyo">Loading...</span>
+										</h3>
+									</td>
+								</tr>
+								<tr style="border: 1px solid black;">
+									<td style="border: 1px solid black;">
+										<div id="treemap-container" style="width: 100%; height: 500px"></div>
+										<div id="percentage-output"></div>
+									</td>
+									<td style="border: 1px solid black;">
+										<div id="chart-container"></div>
+										<div id="percentage-output"></div>
+										<div class="tooltip" id="tooltip"></div>
+									</td>
+								</tr>
+							</table>
+								<tr></tr>
+								<tr>
+									<td>
+										<div id="treemap-container" style="width: 100%; height: 500px"></div>
+										<div id="percentage-output"></div>
+									</td>
+									<td>
+										<div id="chart-container"></div>
+										<div id="percentage-output"></div>
+										<div class="tooltip" id="tooltip"></div>
+									</td>
+								</tr>
+							</table>
 						</div>
 						<script type="module" src="data/tokyo.js"></script>
 						<script type="module" src="js/script_tokyo.js"></script>
