--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" href="css/circle.css" /> 
 		<link rel="stylesheet" href="css/barchart.css" /> 
 		<link rel="stylesheet" href="css/bubbles_newyork.css" />
+		<link rel="stylesheet" href="css/table.css" />
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 	</head>
 	<body>
@@ -83,9 +84,9 @@
 					<label for="tab_3">
 						<div id="content" class="tokyo">TOKYO</div>
 						<div class="tab-content">
-							<table style="border: 1px solid black; border-collapse: collapse; width: calc(100% - 25px); margin: 0 12.5px; table-layout: fixed; width: 1500px;">
-								<tr style="border: 1px solid black;">
-									<td style="border: 1px solid black;">
+							<table>
+								<tr>
+									<td>
 										<h1>
 											N° of Airbnb listings
 											<span class="city-name">Tokyo</span>
@@ -103,12 +104,12 @@
 										</h3>
 									</td>
 								</tr>
-								<tr style="border: 1px solid black;">
-									<td style="border: 1px solid black;">
+								<tr>
+									<td>
 										<div id="treemap-container" style="width: 100%; height: 500px"></div>
 										<div id="percentage-output"></div>
 									</td>
-									<td style="border: 1px solid black;">
+									<td>
 										<div id="chart-container"></div>
 										<div id="percentage-output"></div>
 										<div class="tooltip" id="tooltip"></div>
