push circle update

--- a/barchart.html
+++ b/barchart.html
@@ -11,6 +11,7 @@
             overflow-x: scroll;
         }
     </style>
+    <link rel="stylesheet" href="css/barchart.css">
 </head>
 <body>
     <div id="chart"></div>
