Refactor CSS and HTML files: Adjust animation timing and tooltip style in Tokyo and Tokyo2 charts

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="css/barchart.css" /> 
 		<link rel="stylesheet" href="css/bubbles_newyork.css" />
 		<link rel="stylesheet" href="css/table.css" />
+		<link rel="stylesheet" href="css/tokyo2.css" />
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 	</head>
 	<body>
@@ -125,7 +126,7 @@
 									<td>
 										<div id="chart-container"></div>
 										<div id="percentage-output"></div>
-										<div class="tooltip" id="tooltip"></div>
+										<div class="tooltip" id="tooltip" style="border: none; box-shadow: none;"></div>
 									</td>
 								</tr>
 							</table>
