Refactor index.html: Add test paragraph in table cell

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 										<div id="percentage-output"></div>
 									</td>
 									<td>
+										<p>test hallo hallo</p>
 										<div id="chart-container"></div>
 										<div id="percentage-output"></div>
 										<div class="tooltip" id="tooltip"></div>
