--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 										<div id="percentage-output"></div>
 									</td>
 									<td>
-										<p>test hallo hallo</p>
-										<div id="chart-container"></div>
+										<p>In Tokyo vermieten viele Airbnb-Gastgeber mehr als ein Inserat, darunter auch „Superhosts“, die zahlreiche Wohnungen anbieten. Diese zunehmende Kommerzialisierung von Airbnb fördert jedoch professionelle Großvermieter und verdrängt das ursprüngliche Konzept des Teilens von Wohnraum. Dies führt dazu, dass der Zugang zu erschwinglichem Wohnraum in der Stadt weiter erschwert wird.</p>
+										<div id="chart-container" style="display: flex; justify-content: center;"></div>
 										<div id="percentage-output"></div>
 										<div class="tooltip" id="tooltip"></div>
 									</td>
