Refactor CSS and HTML files: Adjust tooltip and table styles in Tokyo and Tokyo2 charts

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 								</tr>
 								<tr>
 									<td>
+										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in den betroffenen Stadtteilen gefährdet wird.</p>
 										<div id="treemap-container" style="width: 100%; height: 500px"></div>
 										<div id="percentage-output"></div>
 									</td>
