--- a/index.html
+++ b/index.html
@@ -107,12 +107,18 @@
 								</tr>
 								<tr>
 									<td>
-										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in den betroffenen Stadtteilen gefährdet wird.</p>
 										<div id="treemap-container" style="width: 100%; height: 500px"></div>
 										<div id="percentage-output"></div>
+										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. 
+											Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die 
+											Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in
+											 den betroffenen Stadtteilen gefährdet wird.</p>
+
 									</td>
 									<td>
-										<p>In Tokyo vermieten viele Airbnb-Gastgeber mehr als ein Inserat, darunter auch „Superhosts“. Die Kommerzialisierung der Plattform fördert Großvermieter und verdrängt das ursprüngliche Konzept des Teilens von Wohnraum. Dies trägt zur Gentrifizierung bei und erschwert den Zugang zu erschwinglichem Wohnraum in der Stadt.</p>
+										<p style="margin-top: -85px;">In Tokyo vermieten viele Airbnb-Gastgeber mehr als ein Inserat, darunter auch „Superhosts“. Die Kommerzialisierung der Plattform 
+											fördert Großvermieter und verdrängt das ursprüngliche Konzept des Teilens von Wohnraum. Dies trägt zur Gentrifizierung bei und 
+											erschwert den Zugang zu erschwinglichem Wohnraum in der Stadt.</p>
 										<div id="chart-container" style="display: flex; justify-content: center;"></div>
 										<div id="percentage-output"></div>
 										<div class="tooltip" id="tooltip" style="border: none; box-shadow: none;"></div>
