Refactor index.html: Update New York section with responsive layout

--- a/index.html
+++ b/index.html
@@ -58,28 +58,42 @@
 					<label for="tab_2">
 						<div id="content" class="new-york">NEW YORK</div>
 						<div class="tab-content">
-							<div
-								class="dots-wrapper"
-								id="dots"
-								style="
-									transform: translateX(-100px);
-									transform: translateY(520px);
-								"
-							></div>
-							<p
-								id="info-text"
-								style="
-									transform: translateX(-660px);
-									transform: translateY(520px);
-								"
-							></p>
-							<div class="svg-container">
-								<svg width="500" height="500"></svg>
-							</div>
-							<div class="dots-wrapper" id="dots" style="transform: translateX(-100px); transform: translateY(520px);"></div>
-							<p id="info-text" style="transform: translateX(-660px); transform: translateY(520px);"></p>
-							</p>
+							<table>
+								<tr>
+									<td>
+										<h1>
+											N° of Airbnb listings
+											<span class="city-name">New York</span>
+											<span id="total-ids-newyork">Loading...</span>
+										</h1>
+										<h3>
+											<span id="apartments-newyork">Loading...</span>
+										</h3>
+										<h3>
+											<span id="population-newyork">Loading...</span> /
+											<span id="tourists-newyork">Loading...</span>
+										</h3>
+										<h3>
+											<span id="airbnb-index-newyork">Loading...</span>
+										</h3>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div class="dots-wrapper" id="dots">
+										<p id="info-text"></p>
+										</div>
+									</td>
+									<td>	
+										<div class="svg-container">
+										<svg width="500px" height="100%"></svg></td>
+									</td>
+								</tr>
+							</table>
 						</div>
+						<script type="module" src="data/newyork.js"></script>
+						<script type="module" src="js/newyork.js"></script>
+						<script type="module" src="js/bubbles_newyork.js"></script>
 					</label>
 
 					<label for="tab_3">
@@ -211,6 +225,5 @@
 		<script src="/data/apartmentPrices.js"></script>
 		<script src="js/newyork.js"></script>
 		<script src="js/circle.js"></script>
-		<script src="js/bubbles_newyork.js"></script>
 	</body>
 </html>
