Refactor index.html: Update New York section with responsive layout

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 										<h1>
 											N° of Airbnb listings
 											<span class="city-name">New York</span>
-											<span id="total-ids-newyork">Loading...</span>
+											<span id="total-ids-new-york">Loading...</span>
 										</h1>
 										<h3>
-											<span id="apartments-newyork">Loading...</span>
+											<span id="apartments-new-york">Loading...</span>
 										</h3>
 										<h3>
-											<span id="population-newyork">Loading...</span> /
-											<span id="tourists-newyork">Loading...</span>
+											<span id="population-new-york">Loading...</span> /
+											<span id="tourists-new-york">Loading...</span>
 										</h3>
 										<h3>
-											<span id="airbnb-index-newyork">Loading...</span>
+											<span id="airbnb-index-new-york">Loading...</span>
 										</h3>
 									</td>
 								</tr>
