--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 						<div class="tab-content">
 							<div>
 								<h3 style="color: black">
-									In vielen Großstädten wird Wohnraum knapp,
-									während immer mehr Wohnungen über
-									Plattformen wie Airbnb an Tourist*innen
-									vermietet werden. Dies trägt zur Verdrängung
-									von Einheimischen und steigenden Mietpreisen
-									bei. Unsere Visualisierung zeigt die
-									Verteilung von Airbnb-Angeboten in sieben
-									Städten und soll ein Bewusstsein für die
-									Auswirkungen auf den Wohnungsmarkt schaffen.
+									Living space is becoming scarce in many large cities,
+                                    while more and more apartments are
+                                    platforms such as Airbnb to tourists
+                                    are being rented out to tourists. This contributes to the displacement
+                                    of locals and rising rental prices
+                                    contribute. Our visualization shows the
+                                    distribution of Airbnb offers in seven cities
+                                    cities and is intended to raise awareness of the
+                                    impact on the housing market.
 								</h3>
 							</div>
 							<div>
@@ -123,16 +123,16 @@
 									<td>
 										<div id="treemap-container" style="width: 100%; height: 500px"></div>
 										<div id="percentage-output"></div>
-										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. 
-											Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die 
-											Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in
-											 den betroffenen Stadtteilen gefährdet wird.</p>
+										<p>In Tokyo, Airbnb offerings are diverse, including private rooms, entire apartments, shared rooms and luxury accommodation. 
+                                            The uneven distribution of these types of accommodation in different neighborhoods has a significant impact on rents. 
+                                            rents. This dynamic reinforces gentrification and leads to the displacement of locals, jeopardizing the quality of life in the affected neighbourhoods.
+                                             quality of life in the affected neighborhoods.</p>
 
 									</td>
 									<td>
-										<p style="margin-top: -85px;">In Tokyo vermieten viele Airbnb-Gastgeber mehr als ein Inserat, darunter auch „Superhosts“. Die Kommerzialisierung der Plattform 
-											fördert Großvermieter und verdrängt das ursprüngliche Konzept des Teilens von Wohnraum. Dies trägt zur Gentrifizierung bei und 
-											erschwert den Zugang zu erschwinglichem Wohnraum in der Stadt.</p>
+										<p style="margin-top: -85px;">In Tokyo, many Airbnb hosts rent out more than one listing, including “superhosts”. The commercialization of the platform 
+                                            promotes large-scale landlords and displaces the original concept of sharing living space. This contributes to gentrification and 
+                                            makes access to affordable housing in the city more difficult.</p>
 										<div id="chart-container" style="display: flex; justify-content: center;"></div>
 										<div id="percentage-output"></div>
 										<div class="tooltip" id="tooltip" style="border: none; box-shadow: none;"></div>
