Refactor index.html: Update New York section with responsive layout and add information about Airbnb listings impact on local housing markets

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 									</td>
 									<td>	
 										<div class="svg-container">
-										<svg width="500px" height="100%"></svg></td>
+										<svg width="500px" height="100%"></svg>
+										<p id="info-text-new-york">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification and displacement of long-term residents.</p>
 									</td>
 								</tr>
 							</table>
@@ -126,7 +127,7 @@
 										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. 
 											Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die 
 											Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in
-											 den betroffenen Stadtteilen gefährdet wird.</p>
+											den betroffenen Stadtteilen gefährdet wird.</p>
 
 									</td>
 									<td>
