--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
 										<p id="info-text"></p>
 										</div>
 									</td>
-									<td>	
-										<div class="svg-container">
-										<svg width="500px" height="100%"></svg>
-										<p id="info-text-new-york">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification and displacement of long-term residents.</p>
+									<td>
+										<div class="svg-container" style="display: flex; flex-direction: column;">
+											<svg width="500px" height="100%"></svg>
+											<p id="info-text-new-york" style="flex-grow: 1; margin-top: -525px;">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets 
+												and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification 
+												and displacement of long-term residents.</p>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -124,10 +127,10 @@
 									<td>
 										<div id="treemap-container" style="width: 100%; height: 500px"></div>
 										<div id="percentage-output"></div>
-										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. 
-											Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die 
-											Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in
-											 den betroffenen Stadtteilen gefährdet wird.</p>
+										<p>In Tokyo, Airbnb offerings are diverse, including private rooms, entire apartments, shared rooms and luxury accommodation. 
+                                            The uneven distribution of these types of accommodation in different neighborhoods has a significant impact on rents. 
+                                            rents. This dynamic reinforces gentrification and leads to the displacement of locals, jeopardizing the quality of life in the affected neighbourhoods.
+                                             quality of life in the affected neighborhoods.</p>
 
 									</td>
 									<td>
