--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 											<div id="slider-container">
 												<input type="range" id="slider" min="1" max="32" value="7">
 												<div id="slider-value">Minimum Nights: 7</div>
-												<h5>
-													Slide to find out how many AirBnB's are available per minimum nights!
-												</h5>
+											
+													<p style="margin-top: 5px;">Slide to find out how many AirBnB's are available per minimum nights!</p>
+												
 											</div>
 										</div>
 									</td>
@@ -228,3 +228,4 @@
 		<script src="js/circle.js"></script>
 	</body>
 </html>
+Slide to find out how many AirBnB's are available per minimum nights!
