Refactor CSS files: Update layout, tabs, content, table, tokyo2, tokyo, and circle styles

--- a/index.html
+++ b/index.html
@@ -30,18 +30,13 @@
 						<div id="content" class="sharebnb" style="color: black">
 							ShareBnB
 						</div>
-						<div class="tab-content">
+						<div class="tab-content-frontpage">
 							<div>
 								<h3 style="color: black">
-									Living space is becoming scarce in many large cities,
-                                    while more and more apartments are
-                                    platforms such as Airbnb to tourists
-                                    are being rented out to tourists. This contributes to the displacement
-                                    of locals and rising rental prices
-                                    contribute. Our visualization shows the
-                                    distribution of Airbnb offers in seven cities
-                                    cities and is intended to raise awareness of the
-                                    impact on the housing market.
+									Living space in many large cities has become a luxury that fewer and fewer people can afford, largely due to the overwhelming dominance of short-term rentals like Airbnb.
+									Entire neighborhoods are being hollowed out as homes are rented to tourists rather than to locals, pushing residents out and driving rental prices through the roof.
+									The current system, which favors profit over people, is exacerbating housing inequality. Our data visualization exposes the stark reality of this issue, revealing the saturation of Airbnb listings in seven major cities and highlighting the disturbing impact this has on the already fragile housing market.
+									It's a call to question why we allow this unchecked commodification of living space to displace the very people who live and work in these cities.
 								</h3>
 							</div>
 							<div>
@@ -127,7 +122,7 @@
 										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. 
 											Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die 
 											Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in
-											 den betroffenen Stadtteilen gefährdet wird.</p>
+											den betroffenen Stadtteilen gefährdet wird.</p>
 
 									</td>
 									<td>
