Refactor CSS: Update tab content class in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<div id="content" class="sharebnb" style="color: black">
 							ShareBnB
 						</div>
-						<div class="tab-content-frontpage">
+						<div class="tab-content">
 							<div>
 								<h3 style="color: black">
 									Living space in many large cities has become a luxury that fewer and fewer people can afford, largely due to the overwhelming dominance of short-term rentals like Airbnb.
