Refactor CSS and JavaScript files: Update stroke and fill colors, font size, and SVG dimensions

--- a/index.html
+++ b/index.html
@@ -75,14 +75,17 @@
 								</tr>
 								<tr>
 									<td>
-										<div class="dots-wrapper" id="dots">
+										<div class="dots-wrapper" id="dots"></div>
 										<p id="info-text"></p>
-										</div>
+										
 									</td>
-									<td>	
-										<div class="svg-container">
-										<svg width="500px" height="100%"></svg>
-										<p id="info-text-new-york">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification and displacement of long-term residents.</p>
+									<td>
+										<div class="svg-container" style="display: flex; flex-direction: column;">
+											<svg width="500px" height="100%"></svg>
+											<p id="info-text-new-york" style="flex-grow: 1; margin-top: -525px;">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets 
+												and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification 
+												and displacement of long-term residents.</p>
+										</div>
 									</td>
 								</tr>
 							</table>
