Refactor language in index.html: Update German to English for Tokyo description

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 									<td>
 										<div id="treemap-container" style="width: 100%; height: 500px"></div>
 										<div id="percentage-output"></div>
-										<p>In Tokio sind Airbnb-Angebote vielfältig, darunter Privatzimmer, gesamte Wohnungen, Gemeinschaftszimmer und Luxusunterkünfte. 
-											Die ungleiche Verteilung dieser Unterbringungsarten in den verschiedenen Nachbarschaften hat erhebliche Auswirkungen auf die 
-											Mieten. Diese Dynamik verstärkt die Gentrifizierung und führt zur Verdrängung von Einheimischen, wodurch die Lebensqualität in
-											den betroffenen Stadtteilen gefährdet wird.</p>
+										<p>In Tokyo, Airbnb offerings are diverse, including private rooms, entire apartments, shared rooms and luxury accommodation. 
+                                            The uneven distribution of these types of accommodation in different neighborhoods has a significant impact on rents. 
+                                            rents. This dynamic reinforces gentrification and leads to the displacement of locals, jeopardizing the quality of life in the affected neighbourhoods.
+                                             quality of life in the affected neighborhoods.</p>
 
 									</td>
 									<td>
