--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 									<td>
 										<div class="svg-container" style="display: flex; flex-direction: column;">
 											<svg width="500px" height="100%"></svg>
-											<p id="info-text-new-york" style="flex-grow: 1; margin-top: -525px;">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets 
+											<p id="info-text-new-york" style="flex-grow: 1; margin-top: -525px;">In New York, Airbnb listings are spread across various 
+												neighborhoods, impacting local housing markets 
 												and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification 
 												and displacement of long-term residents.</p>
 										</div>
