--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
 								</tr>
 								<tr>
 									<td>
-										<div style="display: flex; flex-direction: column; justify-content: center; margin-top: -500px;">
-											<div class="dots-wrapper" id="dots"></div>
-											<p id="info-text"></p>
+										<p>hallo hallo hallo </p>
+										<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: -500px;"></div>
+											<div class="dots-wrapper" id="dots" style="width: 40vw; margin: 0 auto;"></div>
+											<p id="info-text" style="text-align: center;"></p>
 										</div>
 										
 									</td>
 									<td>
 										<div class="svg-container" style="display: flex; flex-direction: column;">
 											<svg width="500px" height="100%"></svg>
-											<p id="info-text-new-york" style="flex-grow: 1; margin-top: -525px;">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets 
+											<p id="info-text-new-york" style="flex-grow: 1; margin-top:-525px;">In New York, Airbnb listings are spread across various neighborhoods, impacting local housing markets 
 												and contributing to rising rent prices. The concentration of short-term rentals in certain areas can lead to gentrification 
 												and displacement of long-term residents.</p>
 										</div>
