--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 											<div id="slider-container">
 												<input type="range" id="slider" min="1" max="32" value="7">
 												<div id="slider-value">Minimum Nights: 7</div>
-												<h5>
+												<p style="margin-top: 20px;">
 													Slide to find out how many AirBnB's are available per minimum nights!
-												</h5>
+												</p>
 											</div>
 										</div>
 									</td>
