Refactor CSS: Adjust text alignment and position in content.css

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 											<span id="airbnb-index-new-york">Loading...</span>
 										</h3>
 									</td>
+									<td>
+										<p>hier einfügen</p>
+									</td>
 								</tr>
 								<tr>
 									<td>
@@ -118,6 +121,12 @@
 										<h3>
 											<span id="airbnb-index-tokyo">Loading...</span>
 										</h3>
+									</td>
+									<td>
+										<p>Tokyo, the capital of Japan, is a dynamic metropolis that combines tradition and modernity. It is known for its highly developed 
+											technology, dense population and diverse cultural scene. The city offers a unique blend of futuristic architecture and tranquil, 
+											traditional neighborhoods. As a global center for business and innovation, Tokyo shapes international trends in fashion, art and 
+											technology.</p>
 									</td>
 								</tr>
 								<tr>
@@ -177,6 +186,9 @@
 										<h3>
 											<span id="airbnb-index-paris">Loading...</span>
 										</h3>
+									</td>
+									<td>
+										<p>pimmel</p>
 									</td>
 								</tr>
 								<tr>
