--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								</tr>
 								<tr>
 									<td>
-										<div id="chart-container-paris">
+										<div id="chart-container-paris" style="width: 100%; height: 100%;">
 											<div class="chart-group">
 												<div id="chart"></div>
 											</div>
