Refactor index.html: Update Airbnb impact description in New York City

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										</h3>
 									</td>
 									<td>
-										<p>hier einfügen</p>
+										<p>Airbnbs in New York City, especially in Manhattan and Brooklyn, have exacerbated the housing crisis by turning residential units into short-term rentals, reducing long-term housing availability and increasing rents. The city's response, including Local Law 18, seeks to mitigate these effects by enforcing strict registration and limiting rentals to when the host is present. This has led to a decline in Airbnb listings, financially impacting hosts and prompting some to shift to long-term rentals. While Airbnbs have boosted tourism with affordable alternatives to hotels, they have also contributed to neighborhood displacement and affordability issues.</p>
 									</td>
 								</tr>
 								<tr>
