Refactor index.html: Update text in table cell

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 										</h3>
 									</td>
 									<td>
-										<p>pimmel</p>
+										<p>arsch</p>
 									</td>
 								</tr>
 								<tr>
