--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								</tr>
 								<tr>
 									<td>
-										<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; margin-top: -500px;"></div>
+										<div style="display: flex; flex-direction: column; justify-content: left; align-items: left; margin-top: -500px;"></div>
 											<div class="dots-wrapper" id="dots" style="width: 40vw; margin: 0 auto;"></div>
 											<p id="info-text" style="text-align: center;"></p>
 										</div>
