Refactor CSS: Adjust table layout in table.css and update text in index.html

--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@
 										</h3>
 									</td>
 									<td>
-										<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; ">
 										<p >Paris is a city where elegance and artistry intertwine, with timeless architecture, chic boutiques, and café terraces blending 
 											seamlessly under a golden light that transforms the everyday into something sublime. From the delicate curves of wrought-iron 
-											balconies to the fashion-forward energy of the streets, it’s a place where style feels innate and effortlessly refined.</p> </div>
+											balconies to the fashion-forward energy of the streets, it’s a place where style feels innate and effortlessly refined.</p> 
 									</td>
 								</tr>
 								<tr>
@@ -208,7 +207,7 @@
 												<div class="label"></div>
 												<div class="label"></div>
 											</div>
-											<canvas id="canvas"></canvas>
+											<canvas id="canvas" ></canvas>
 											<div id="slider-container">
 												<input type="range" id="slider" min="1" max="32" value="7">
 												<div id="slider-value">Minimum Nights: 7</div>
@@ -221,10 +220,7 @@
 								</tr>
 							</table>
 					
-							<!-- Include D3.js library -->
 							<script src="https://d3js.org/d3.v6.min.js"></script>
-					
-							<!-- Include your JavaScript code -->
 							<script src="js/barchart.js"></script>
 							<script type="module" src="js/circle.js"></script>
 							<script src="js/circle.js"></script>
