Refactor CSS: Adjust chart container size and font in index.html

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 										</h3>
 									</td>
 									<td>
-										<p >Paris is a city where elegance and artistry intertwine, with timeless architecture, chic boutiques, and café terraces blending 
-											seamlessly under a golden light that transforms the everyday into something sublime. From the delicate curves of wrought-iron 
-											balconies to the fashion-forward energy of the streets, it’s a place where style feels innate and effortlessly refined.</p> 
+										<p >Paris is a city where elegance and artistry intertwine, with timeless architecture, <br> chic boutiques, and café terraces blending 
+											seamlessly under a golden light that <br>transforms the everyday into something sublime. From the delicate curves of<br>wrought-iron 
+											balconies to the fashion-forward energy of the streets, it’s a place <br>where style feels innate and effortlessly refined.</p> 
 									</td>
 								</tr>
 								<tr>
