--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<td>
 										<div style="display: flex; flex-direction: column; justify-content: left; align-items: left; margin-top: -500px;"></div>
 											<div class="dots-wrapper" id="dots" style="width: 40vw; margin: 0 auto;"></div>
-											<p id="info-text" style="text-align: center;"></p>
+											<p id="info-text" style="text-align: center; padding-top: 10%;"></p>
 										</div>
 										
 									</td>
