--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 					<label for="tab_4">
 						<div id="content" class="paris">PARIS</div>
 						<div class="tab-content">
+							
 							<table>
 								<tr>
 									<td>
@@ -200,6 +201,9 @@
 											<div class="chart-group">
 												<div id="chart"></div>
 											</div>
+											<div id="chart"></div>
+<p id="hover-info" style="text-align: center; font-family: Inter; font-size: 16px; color: white; margin-top: -40px;">Hover over a bar to see details</p>
+
 										</div>
 									</td>
 									<td>
