Refactor CSS: Adjust margin for tab content heading

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					
 						<div id="tab_1-content" class="tab-content">
 							<div>
-								<h3 class="left-align" style="margin-right: 550px; margin-top: 100px;">
+								<h3 class="left-align" style="margin-top: 100px;">
 									Living space in many large cities has become a luxury that fewer and fewer people can afford, largely due to the overwhelming dominance of short-term rentals like Airbnb. Entire neighborhoods are being hollowed out as homes are rented to tourists rather than to locals, pushing residents out and driving rental prices through the roof. The current system, which favors profit over people, is exacerbating housing inequality.
 									<br><br>
 									In New York City, the unchecked proliferation of short-term rentals has intensified the housing crisis, with entire blocks transformed into transient accommodations, leaving local communities fragmented and rents soaring beyond affordability. Paris struggles with a similar invasion, where the charm of its historic districts is overshadowed by Airbnb's encroachment, driving out long-term residents and inflating housing costs despite regulatory efforts. Meanwhile, Tokyo faces a unique challenge as skyrocketing property values fueled by speculative investments and short-term rental demand threaten to marginalize local populations and erode traditional neighborhoods.
